# openmw

./: CMakeLists.txt
apps/mwo_masterserver/: CMakeLists.txt  mwo_clientconnection.cpp  mwo_clientconnection.hpp  mwo_masterconnection.cpp  mwo_masterconnection.hpp  mwo_masterserver.cpp  mwo_masterserver.hpp
apps/mwo_shardserver/: CMakeLists.txt  mwo_shardserver.cpp  mwo_shardserver.hpp  mwo_shardtomasterconnection.cpp  mwo_shardtomasterconnection.hpp
components/: CMakeLists.txt
components/mwo_net/: mwo_common.hpp  mwo_connection.cpp  mwo_connection.hpp  mwo_connectionfactory.hpp  mwo_corepackets.cpp  mwo_corepackets.hpp  mwo_endpoint.cpp  mwo_endpoint.hpp  mwo_packet.cpp  mwo_packet.hpp  mwo_service.cpp  mwo_service.hpp  mwo_socket.cpp  mwo_socket.hpp  mwo_udpclient.cpp  mwo_udpclient.hpp  mwo_udpclientconnection.cpp  mwo_udpclientconnection.hpp  mwo_udpconnection.cpp  mwo_udpconnection.hpp  mwo_udpserver.cpp  mwo_udpserver.hpp
